atv-quote-shipping/force-app/main/default/objects/Quote/Quote.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>