atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_Cotizar_en_pesos__c.field-meta.xml
<CustomField>
    <fullName>ATV_Cotizar_en_pesos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GOA en pesos</label>
    <type>Checkbox</type>
</CustomField>