atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_No_enviar_a_NS__c.field-meta.xml
<CustomField>
    <fullName>ATV_No_enviar_a_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No enviar a NS</label>
    <type>Checkbox</type>
</CustomField>