atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_DEPARTAMENTO__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_DEPARTAMENTO__c</fullName>
    <defaultValue>&quot;VENTAS&quot;</defaultValue>
    <label>DEPARTAMENTO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <label>ADMINISTRACIÓN Y FINANZAS</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>COMPRAS Y OPERACIONES</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>DESARROLLO DE NUEVOS PRODUCTOS</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>MEJORA CONTINUA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PRODUCCIÓN</label>
            </value>
            <value>
                <fullName>4</fullName>
                <default>true</default>
                <label>VENTAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>