atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_ENVIAR_CONTROL_DE_CALIDAD__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_ENVIAR_CONTROL_DE_CALIDAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ENVIAR CONTROL DE CALIDAD</label>
    <type>Checkbox</type>
</CustomField>