atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_FECHA_DE_ENVIO__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_FECHA_DE_ENVIO__c</fullName>
    <label>FECHA DE ENVIO</label>
    <type>Date</type>
</CustomField>