atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_GOA_SOLO_PARA_FACTURAR__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_GOA_SOLO_PARA_FACTURAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GOA SOLO PARA FACTURAR</label>
    <type>Checkbox</type>
</CustomField>