atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_MONEDA__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_MONEDA__c</fullName>
    <label>MONEDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>