atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_Muestra__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_Muestra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muestra</label>
    <type>Checkbox</type>
</CustomField>