atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_NO_ENVIAR_PARCIALES__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_NO_ENVIAR_PARCIALES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO ENVIAR PARCIALES</label>
    <type>Checkbox</type>
</CustomField>