atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_NotaParaElRemito__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_NotaParaElRemito__c</fullName>
    <label>Nota para el remito/rotulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>