atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_ordenDeCompra__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_ordenDeCompra__c</fullName>
    <label>N° de Orden de compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>