atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_TRANSPORTE__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_TRANSPORTE__c</fullName>
    <label>TRANSPORTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALMAR ROSARIO SRL</fullName>
            </value>
            <value>
                <fullName>ARIAS EZEQUIEL (GRUPO REDFOX)</fullName>
            </value>
            <value>
                <fullName>BARRY LATIMER</fullName>
            </value>
            <value>
                <fullName>BERGAMASCHI OSVALDO RAMON</fullName>
            </value>
            <value>
                <fullName>BRIDGE ROSARIO SRL</fullName>
            </value>
            <value>
                <fullName>BURGOS LILIAN GISELLE (transp trans par)</fullName>
            </value>
            <value>
                <fullName>CAROSSIO, VAIROLATTI Y CIA</fullName>
            </value>
            <value>
                <fullName>CATA CARGO</fullName>
            </value>
            <value>
                <fullName>CENTRO DE ENCOMIENDAS SANTA FE</fullName>
            </value>
            <value>
                <fullName>CONTE HNOS Y CIA SA</fullName>
            </value>
            <value>
                <fullName>CORREO ANDREANI SA</fullName>
            </value>
            <value>
                <fullName>CORREO ARGENTINO</fullName>
            </value>
            <value>
                <fullName>DEAN FUNES CARGAS SRL</fullName>
            </value>
            <value>
                <fullName>DEPOSITO CAFFERATA</fullName>
            </value>
            <value>
                <fullName>DHL EXPRESS SA</fullName>
            </value>
            <value>
                <fullName>DIAZ ANIBAL (COMISIONISTA)</fullName>
            </value>
            <value>
                <fullName>DS CARGAS S.A.S (TRANSPORTE EL QUEBRACHITO)</fullName>
            </value>
            <value>
                <fullName>EL TERO</fullName>
            </value>
            <value>
                <fullName>ESTACION CAFFERATA SRL</fullName>
            </value>
            <value>
                <fullName>ESTACION DE CARGAS GONZALEZ</fullName>
            </value>
            <value>
                <fullName>ESTACION DE CARGAS OCAMPO</fullName>
            </value>
            <value>
                <fullName>ESTACION DE CARGAS RIO DE JANEIRO</fullName>
            </value>
            <value>
                <fullName>ESTACION DE CARGAS SAN LORENZO</fullName>
            </value>
            <value>
                <fullName>EST CARGAS ALEM-CORNEJO</fullName>
            </value>
            <value>
                <fullName>EXPRESO BILETTA SRL</fullName>
            </value>
            <value>
                <fullName>EXPRESO BRIO SRL</fullName>
            </value>
            <value>
                <fullName>EXPRESO CARGO SA</fullName>
            </value>
            <value>
                <fullName>EXPRESO CATAMARCA SRL</fullName>
            </value>
            <value>
                <fullName>EXPRESO DIEMAR</fullName>
            </value>
            <value>
                <fullName>EXPRESO EL IMPALA S.H.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>