atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_NTS_UBICACION__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_UBICACION__c</fullName>
    <defaultValue>&quot;Castle&quot;</defaultValue>
    <label>UBICACIÓN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Castle</fullName>
                <default>true</default>
                <label>Castle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>