atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_Override_flows__c.field-meta.xml
<CustomField>
    <fullName>ATV_Override_flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override flows</label>
    <type>Checkbox</type>
</CustomField>