atv-quote-shipping/force-app/main/default/objects/Quote/fields/ATV_Selected_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>ATV_Selected_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direccion de envío seleccionada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ATV_NTS_Direccion_de_Envio__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.QuoteAccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ATV_NTS_Direccion_de_Envio__c</referenceTo>
    <relationshipLabel>Quotes (Selected Shipping Address)</relationshipLabel>
    <relationshipName>QuotesDirection</relationshipName>
    <type>Lookup</type>
</CustomField>