atv-quote-shipping/force-app/main/default/objects/Quote/fields/CLASE__c.field-meta.xml
<CustomField>
    <fullName>CLASE__c</fullName>
    <label>CLASE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CINTA ADHESIVA ESPECIAL</fullName>
            </value>
            <value>
                <fullName>CINTA ADHESIVA STANDARD</fullName>
            </value>
            <value>
                <fullName>EMBALAJES</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>PND</fullName>
            </value>
            <value>
                <fullName>VCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>