atv-quote-shipping/force-app/main/default/objects/Quote/fields/CONDICIONES_COMERCIALES__c.field-meta.xml
<CustomField>
    <fullName>CONDICIONES_COMERCIALES__c</fullName>
    <label>CONDICIONES COMERCIALES</label>
    <length>100</length>
    <type>Text</type>
</CustomField>