atv-quote-shipping/force-app/main/default/objects/Quote/fields/Costo_total__c.field-meta.xml
<CustomField>
    <fullName>Costo_total__c</fullName>
    <label>Costo total</label>
    <summarizedField>QuoteLineItem.Costo_flow__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>