atv-quote-shipping/force-app/main/default/objects/Quote/fields/Direcciones__c.field-meta.xml
<CustomField>
    <fullName>Direcciones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección de envío</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ATV_NTS_Direccion_de_Envio__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.QuoteAccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ATV_NTS_Direccion_de_Envio__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>