atv-quote-shipping/force-app/main/default/objects/Quote/fields/FLETE__c.field-meta.xml
<CustomField>
    <fullName>FLETE__c</fullName>
    <label>FLETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A CONFIRMAR</fullName>
            </value>
            <value>
                <fullName>FLETE ORIGEN</fullName>
            </value>
            <value>
                <fullName>FLETE DESTINO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>