atv-quote-shipping/force-app/main/default/objects/Quote/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <formula>1-( Costo_total__c / TotalPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>