atv-quote-shipping/force-app/main/default/objects/Quote/fields/ID_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>ID_Netsuite__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id. externo</inlineHelpText>
    <label>ID Netsuite</label>
    <length>20</length>
    <type>Text</type>
</CustomField>