atv-quote-shipping/force-app/main/default/objects/Quote/fields/Launch_Approval__c.field-meta.xml
<CustomField>
    <fullName>Launch_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch_Approval</label>
    <type>Checkbox</type>
</CustomField>