atv-quote-shipping/force-app/main/default/objects/Quote/fields/NOTAS_COMENTARIOS__c.field-meta.xml
<CustomField>
    <fullName>NOTAS_COMENTARIOS__c</fullName>
    <label>NOTAS / COMENTARIOS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>