atv-quote-shipping/force-app/main/default/objects/Quote/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Presupuestos</relationshipLabel>
    <relationshipName>Presupuestos</relationshipName>
    <type>Lookup</type>
</CustomField>