atv-quote-shipping/force-app/main/default/objects/Quote/fields/QuoteApproved__c.field-meta.xml
<CustomField>
    <fullName>QuoteApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteApproved</label>
    <type>Checkbox</type>
</CustomField>