atv-quote-shipping/force-app/main/default/objects/Quote/fields/Selected_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Selected_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección de Envío Seleccionada</label>
    <referenceTo>ATV_NTS_Direccion_de_Envio__c</referenceTo>
    <relationshipLabel>Quotes con Dirección Seleccionada</relationshipLabel>
    <relationshipName>Quotes_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>