atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Quote_not_yet_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_not_yet_approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    QuoteApproved__c = False, 
    ISPICKVAL(PRIORVALUE( Status ), &quot;Draft&quot;)  ,
    OR(
     ISPICKVAL(Status , &quot;In Review&quot;) ,
     ISPICKVAL(Status , &quot;Approved&quot;) ,
     ISPICKVAL(Status , &quot;Rejected&quot;),
     ISPICKVAL(Status , &quot;Presented&quot;) ,
     ISPICKVAL(Status , &quot;Accepted&quot;) ,
     ISPICKVAL(Status , &quot;Denied&quot;) 
       )
   )</errorConditionFormula>
    <errorMessage>Falta la aprobacion interna del presupuesto</errorMessage>
</ValidationRule>