atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Quote_Syncing.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Syncing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  NOT(IsSyncing)
)</errorConditionFormula>
    <errorDisplayField>IsSyncing</errorDisplayField>
    <errorMessage>Por favor, sincronizar el presupuesto</errorMessage>
</ValidationRule>