atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  OR(
    ISPICKVAL(FLETE__c, &quot;&quot;)

  )
)</errorConditionFormula>
    <errorDisplayField>FLETE__c</errorDisplayField>
    <errorMessage>Para aceptar la cotización, completá: Flete.</errorMessage>
</ValidationRule>