atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Required_fields_contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_contacto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  OR(
    ISBLANK(ContactId)
  )
)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Para aceptar la cotización, completá: Contacto asociado.</errorMessage>
</ValidationRule>