atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Required_fields_direcciones.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_direcciones</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  OR(
    ISBLANK(Direcciones__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Direcciones__c</errorDisplayField>
    <errorMessage>Para aceptar la cotización, completá: Dirección de envío.</errorMessage>
</ValidationRule>