atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Required_fields_fechaDeEnvio.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_fechaDeEnvio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  OR(
    ISBLANK(ATV_NTS_FECHA_DE_ENVIO__c)
  )
)</errorConditionFormula>
    <errorDisplayField>ATV_NTS_FECHA_DE_ENVIO__c</errorDisplayField>
    <errorMessage>Para aceptar la cotización, completá: Fecha de envío.</errorMessage>
</ValidationRule>