atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Required_fields_OrdenDeCompra.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_OrdenDeCompra</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  OR(
    ISBLANK(ATV_NTS_ordenDeCompra__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Direcciones__c</errorDisplayField>
    <errorMessage>Para aceptar la cotización, completá: N° de orden de compra.</errorMessage>
</ValidationRule>