atv-quote-shipping/force-app/main/default/objects/Quote/validationRules/Required_fields_Transporte.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_Transporte</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  ISCHANGED(Status),
  OR(
    ISPICKVAL(ATV_NTS_TRANSPORTE__c, &quot;&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>ATV_NTS_TRANSPORTE__c</errorDisplayField>
    <errorMessage>Para aceptar la cotización, completá: Transporte.</errorMessage>
</ValidationRule>